GalleryManager-SangND: add navigation

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/item_album"
+            android:icon="@drawable/ic_baseline_photo_album_24"
+            android:title="Album" />
 
+        <item
+            android:id="@+id/item_all_media"
+            android:icon="@drawable/ic_baseline_perm_media_24"
+            android:title="All Media" />
+
+        <item
+            android:id="@+id/item_time_line"
+            android:icon="@drawable/ic_baseline_timeline_24"
+            android:title="Time Line" />
+    </group>
 </menu>
