GalleryManager-SangND: show album

--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.AlbumFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    android:paddingTop="10dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/albums"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Album" />
-
-</FrameLayout>
+        android:layout_gravity="center_horizontal"
+        android:clipToPadding="false"
+        android:scrollbars="vertical"/>
+</RelativeLayout>
