--- a/app/src/main/res/layout/fragment_time_line.xml
+++ b/app/src/main/res/layout/fragment_time_line.xml
@@ -3,12 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.TimeLineFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Time Line" />
-
+    tools:context=".fragment.TimeLineFragment"
+    android:id="@+id/container">
 </FrameLayout>
